@@ -61,6 +61,12 @@ namespace Mono.Linker {
 				}
 			}
 		}
+		
+		public void ReplaceStep (Type target, IStep step)
+		{
+			AddStepBefore (target, step);
+			RemoveStep (target);
+		}
 
 		public void AddStepAfter (Type target, IStep step)
 		{
